--- a/templates/home.html
+++ b/templates/home.html
@@ -21,6 +21,8 @@
       <div class="container">
           <h2 class="text-uppercase text-center text-secondary">Quick Link</h2>
           <hr class="star-dark mb-5">
+          <div class="text-center mt-4"><a class="btn btn-outline-dark btn-xl" role="button" href="{% url "predict" %}">
+            <i class="fa fa-download mr-2"></i><span>Click here!</span></a></div>
       </div>
   </section>
 {% endblock content %}
