--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 <!-- navbar -->
 <body id="page-top">
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-secondary text-uppercase" id="mainNav">
-        <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">ATCC</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right text-uppercase bg-info text-white rounded" aria-controls="navbarResponsive"
+        <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">AI</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right text-uppercase bg-info text-white rounded" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
@@ -88,17 +88,21 @@
                     <p>Stevens Institute of Technology<br>1 Castle Point Terrace, Hoboken, NJ<br></p>
                 </div>
                 <div class="col-md-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase">Around the Web</h4>
+                    <h4 class="text-uppercase">Links</h4>
                     <ul class="list-inline">
-                        <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="#"><i class="fa fa-weixin fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="#"><i class="fa fa-weibo fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="#"><i class="fa fa-github fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="#"><i class="fa fa-code-fork fa-fw"></i></a></li>
+                        <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle"
+                                                        role="button" href="#"><i class="fa fa-weixin fa-fw"></i></a></li>
+                        <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle"
+                                                        role="button" href="#"><i class="fa fa-weibo fa-fw"></i></a></li>
+                        <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle"
+                                                        role="button" href="https://github.com/nature1995/Image-classifiers-on-Django-with-RESTAPI-V2"><i class="fa fa-github fa-fw"></i></a></li>
+                        <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle"
+                                                        role="button" href="https://github.com/nature1995/Image-classifiers-on-Django-with-RESTAPI-V2"><i class="fa fa-code-fork fa-fw"></i></a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
                     <h4 class="text-uppercase mb-4">About</h4>
-                    <p class="lead mb-0"><span>A team in SIT</span></p>
+                    <p class="lead mb-0"><span>Ziran Gong</span></p>
                 </div>
             </div>
         </div>
